math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__big_paren.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\big("
---
[
  SizedParen(Scale1, Fence('(', Always)),
]
