math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__boldsymbol_greek_var.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\boldsymbol{\\Gamma\\varGamma}"
---
[
  IdentifierStr(true, "𝚪𝜞"),
]
