math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__colon_fusion_in_subscript.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "x_:\\equiv, x_:="
---
[
  Subscript(
    target: IdentifierChar('x', Default, false),
    symbol: Operator(
      op: ':',
      attr: None,
      left: None,
      right: None,
    ),
  ),
  Operator(
    op: '≡',
    attr: None,
    left: None,
    right: Some(Zero),
  ),
  Operator(
    op: ',',
    attr: None,
    left: None,
    right: None,
  ),
  Subscript(
    target: IdentifierChar('x', Default, false),
    symbol: Operator(
      op: ':',
      attr: None,
      left: None,
      right: None,
    ),
  ),
  Operator(
    op: '=',
    attr: None,
    left: None,
    right: Some(Zero),
  ),
]
