math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__colon_fusion_stop.snap
---
source: math-core/src/latex_parser/parse.rs
expression: ":2=:="
---
[
  Operator(
    op: ':',
    attr: None,
    left: Some(FourMu),
    right: Some(FourMu),
  ),
  Number("2"),
  Operator(
    op: '=',
    attr: None,
    left: None,
    right: None,
  ),
  Operator(
    op: '≔',
    attr: None,
    left: None,
    right: None,
  ),
]
