math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__comment.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\text{% comment}\n\\%as}"
---
[
  Text("\u{a0}%as"),
]
