math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__displaystyle_ended_by_right.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\left(\\displaystyle \\int\\right)\\int"
---
[
  Fenced(
    style: None,
    open: Fence('(', false, Always),
    close: Fence(')', false, Always),
    content: Row(
      nodes: [
        Operator(
          op: '∫',
          attr: None,
          left: None,
          right: None,
        ),
      ],
      attr: Style(Display),
    ),
  ),
  Operator(
    op: '∫',
    attr: None,
    left: None,
    right: None,
  ),
]
