math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__double_prime.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "f''"
---
[
  Superscript(
    target: IdentifierChar('f', Default),
    symbol: Operator(
      op: Op('″'),
      attr: None,
      left: None,
      right: None,
    ),
  ),
]
