math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__frac_with_subscript.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\frac12_x"
---
[
  Subscript(
    target: Frac(
      num: Number("1"),
      denom: Number("2"),
      lt_value: NaN,
      lt_unit: Rem,
      attr: None,
    ),
    symbol: IdentifierChar('x', Default),
  ),
]
