math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__int_bounds_relation.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "{\\int_0^\\infty = 4}"
---
[
  Row(
    nodes: [
      SubSup(
        target: Operator(
          op: '∫',
          attr: None,
          left: None,
          right: None,
        ),
        sub: Number("0"),
        sup: IdentifierChar('∞', Default),
      ),
      Operator(
        op: '=',
        attr: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attr: None,
  ),
]
