math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__int_relation.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "{\\int = 4}"
---
[
  Row(
    nodes: [
      Operator(
        op: '∫',
        attr: None,
        left: None,
        right: None,
      ),
      Operator(
        op: '=',
        attr: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attr: None,
  ),
]
